Squashed commit of the following:
Improve error handling

Add endpoint for fetching book details by transactionId

Add sell confirmation endpoint

Implement sell link generation

Tweak credentials and add book picture upload endpoint

Add book edit endpoint

Add book validation for selling

Add book remove endpoint and entities ids
