# src/routes/v1/books.ts
@@ -11,13 +11,32 @@ import {
 import { searchBooksController } from '../../controllers/books/search-books';
 import { getSellingBooksController } from '../../controllers/books/get-selling-books';
 import { getSoldBookController } from '../../controllers/books/get-sold-books';
+import { removeBookController } from '../../controllers/books/remove-book';
+import { editBookController } from '../../controllers/books/edit-book';
+import { acceptsSingleFile } from '../../helpers/multer';
+import { uploadBookPictureController } from '../../controllers/books/upload-book-picture';
+import { sellBookLinkController } from '../../controllers/books/sell-book-link';
+import { sellBookConfirmController } from '../../controllers/books/sell-book-confirm';
+import { getBookByTransactionController } from '../../controllers/books/get-book-by-transaction';
 
 const router = Router();
+
+router.put(
+    '/edit/:bookId',
+    isAuthenticated,
+    connectsToController(editBookController),
+);
 
 router.get(
     '/explore',
     isAuthenticated,
     connectsToController(exploreBooksController),
+);
+
+router.get(
+    '/by-transaction/:transactionId',
+    isAuthenticated,
+    connectsToController(getBookByTransactionController),
 );
 
 router.get(
@@ -30,6 +49,12 @@ router.get(
     '/sold',
     isAuthenticated,
     connectsToController(getSoldBookController),
+);
+
+router.delete(
+    '/remove/:bookId',
+    isAuthenticated,
+    connectsToController(removeBookController),
 );
 
 router.get(
@@ -47,6 +72,25 @@ router.post(
         useInjectUserIntoRequestBody('seller'),
         useInjectLocationCoordinatesIntoRequestBody(),
     ),
+);
+
+router.post(
+    '/sell/confirm/:transactionId',
+    isAuthenticated,
+    connectsToController(sellBookConfirmController),
+);
+
+router.get(
+    '/sell/link/:bookId',
+    isAuthenticated,
+    connectsToController(sellBookLinkController),
+);
+
+router.post(
+    '/picture/upload',
+    isAuthenticated,
+    acceptsSingleFile('book-picture'),
+    connectsToController(uploadBookPictureController),
 );
 
 export default router;
